# authenticity

./: .gitignore  README.md  authenticity.db  pyproject.toml
authenticity/: authenticity.db  authfit.db  cli.py  exercises.py  mockup.py  models.py
authenticity/gui/: __init__.py
authenticity/mockup/: create.py  delete.py  read.py
authfit/: authfit.db  models.py
authfit/gui/: __init__.py
authfit/mockup/: create.py  delete.py  read.py
data/: README.md  authenticity.db
docs/: README.md
src/authenticity/: cli.py  exercises.py  model.py  models.py
