[tool.poetry]
name = "authenticity"
version = "0.2.7"
description = "A workout tracking application."
authors = ["Marcus T Taylor <mtaylor9754@hotmail.com>"]
license = "MIT"
readme = "docs/README.md"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [{include = "src/authenticity"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.23"
click = "^8.1.7"

[tool.poetry.scripts]
af-create='authenticity.mockup:_create'
af-delete='authenticity.mockup:_delete'
af-read='authenticity.mockup:_read'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
