[project]
name = "authenticity"
version = "0.2.8"
description = "Workout tracking application."
authors = [
    { name = "Marcus T Taylor", email = "mtaylor9754@hotmail.com" }
]
license = {text="MIT"}
readme = "docs/README.md"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.12"
dependencies = [
    'sqlalchemy',
    'rich-click',
]

[project.scripts]
authenticity='authenticity.cli:cli'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
